--- a/css/details.css
+++ b/css/details.css
@@ -10,6 +10,117 @@ body{
 	font-family: "lato", sans-serif;
 	text-transform: uppercase;
 }
+header{
+	background-color: #c1e0f7;
+}
+
+a:link, a:visited { color: #ff8400; text-decoration: none; font-size: 12px;} 
+
+
+
+.topnav {
+  overflow: hidden;
+  background-color: transparent;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #000;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+#active {
+  background-color:#223e5d ;
+  color: #fff;
+  border: 1px solid #000;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+.dropdown {
+  float: left;
+  overflow: hidden;
+}
+
+.dropdown .dropbtn {
+  font-size: 17px;    
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.topnav a:hover, .dropdown:hover .dropbtn {
+  background-color: #223e5d;
+  color: #fff;
+}
+
+.dropdown-content a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child), .dropdown .dropbtn {
+    display: none;
+  }
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+  .topnav.responsive .dropdown {float: none;}
+  .topnav.responsive .dropdown-content {position: relative;}
+  .topnav.responsive .dropdown .dropbtn {
+    display: block;
+    width: 100%;
+    text-align: left;
+  }
+}
 .container{
 	position: relative;
 	margin: auto;
@@ -46,7 +157,7 @@ p{
 .action{
 	width: 500px;
 }
-.btn{
+#btn1{
 	margin-left: 25px;
 	background: #223e5d;
 	padding-top: 5px;
@@ -55,7 +166,7 @@ p{
 	padding-right: 10px;
 	color: #fff;
 }
-.btn:hover{
+#btn1:hover{
 	background: #c1e0f7;
 	color: #223e5d;
 }
@@ -100,4 +211,19 @@ button{
 }
 h3{
 	color:  #223e5d;
+}
+#btn{
+	background:  red;
+	padding: 10px;
+	outline: 0;
+	border: 0;
+	margin-top: 5px;
+	margin-left: 220px;
+	border-radius: 2px;
+	text-transform: uppercase;
+	letter-spacing: 1.5px;
+
+}
+#btn:hover{
+    color: #fff;
 }
