Bug(LFA-feedback): Implement LFA Feedback on UI
- add link to the sign up page.
- add link to the title.

[delivers #167220450]

--- a/css/login.css
+++ b/css/login.css
@@ -77,3 +77,11 @@ label{
 p{
 	font-size: 20px;
 }
+#link{
+	color: #fff;
+	font-size: 40px;
+}
+#link:hover{
+	text-decoration: none;
+	color: #fff;
+}
