--- a/css/signup.css
+++ b/css/signup.css
@@ -78,3 +78,14 @@ p{
 	padding-bottom: 1px;
 	margin-bottom: 10px;
 }
+.link{
+	display: block;
+	text-decoration: none;
+	color: blue;
+}
+#link{
+	font-size: 40px;
+}
+#link:hover{
+	color: #fff;
+}
